--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.com.insticore</groupId>
+    <groupId>com.insticore</groupId>
     <artifactId>bet_task</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
@@ -21,8 +21,8 @@
         </plugins>
     </build>
     <modules>
-        <module>bet_task_2</module>
-        <module>bet_task_1</module>
+        <module>twenty-two-bet</module>
+        <module>olimp</module>
     </modules>
 
     <dependencies>
